# claims-lakehouse

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
airflow/dags/: claims_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: hipaa_mask.sql
dbt/models/: sources.yml
dbt/models/gold/: _schema.yml  claims_daily.sql  member_360.sql
dbt/models/silver/: _schema.yml  claims_enriched.sql
dbt/models/staging/: _schema.yml  stg_claims_837.sql
docs/: architecture.md
docs/adr/: 0001-duckdb-vs-snowflake.md  0002-edi-837-subset.md  0003-synthea-python-generator.md
great_expectations/expectations/: claims_silver.json
infra/: docker-compose.yml  prometheus.yml
infra/init/: postgres-init.sql
producer/: kafka_publisher.py
producer/edi/: x12_837.py  x12_837_writer.py
producer/synthea/: generator.py  reader.py
scripts/: pg_mirror.py  refresh_bronze.py  run_ge.py
streaming/: bronze.py
tests/: test_edi_roundtrip.py
